# CUMTB-2022-Opensource

./: LICENSE  Readme.md
ucar_ws/: README.md
ucar_ws/src/fdilink_ahrs/: .gitignore  CMakeLists.txt  package.xml
ucar_ws/src/fdilink_ahrs/include/: ahrs_driver.h  fdilink_data_struct.h
ucar_ws/src/fdilink_ahrs/launch/: ahrs_driver.launch
ucar_ws/src/fdilink_ahrs/src/: ahrs_driver.cpp  crc_table.cpp
ucar_ws/src/rf2o_laser_odometry/launch/: rf2o_laser_odometry.launch
ucar_ws/src/rf2o_laser_odometry/src/: CLaserOdometry2D.cpp  CLaserOdometry2DNode.cpp
ucar_ws/src/startup_scripts/: initdev_mini.sh
ucar_ws/src/ucar_cam/: CMakeLists.txt  package.xml
ucar_ws/src/ucar_controller/: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  package.xml
ucar_ws/src/ucar_controller/config/: driver_params_mini.yaml
ucar_ws/src/ucar_controller/include/ucar_controller/: base_driver.h  data_struct.h  fdilink_data_struct.h
ucar_ws/src/ucar_controller/launch/: base_driver.launch  base_driver_ekf.launch  tf_server.launch
ucar_ws/src/ucar_controller/scripts/: performance_test.py  sensor_tf_server.py
ucar_ws/src/ucar_controller/src/: base_driver.cpp  crc_table.cpp
ucar_ws/src/ucar_controller/srv/: GetBatteryInfo.srv  GetMaxVel.srv  GetSensorTF.srv  SetLEDMode.srv  SetMaxVel.srv  SetSensorTF.srv
ucar_ws/src/ucar_map/: CMakeLists.txt  package.xml
ucar_ws/src/ucar_nav/: CMakeLists.txt  package.xml
ucar_ws/src/xf_mic_asr_offline/: CMakeLists.txt  package.xml
ucar_ws/src/ydlidar/: LICENSE  README.md
visonAI/: GetTrainData.py  detect.py  main.py  utils.py
visonAI/arucoTracker/: arucoTracker.py
visonAI/camera/: camera.py
visonAI/voice/: voice_test.py
visonAI/yolo/: Readme.md  detect.py
(+145 files in other folders)
